tests/baselines/reference/parserIndexMemberDeclaration9.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration9.ts (1 errors) ====
    class C {
       export [x: string]: string;
       ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on a class element.
    }